# libSafePointer

./: CMakeLists.txt  README.md
src/: safe_ptr.hpp
test/: main_test.cpp
